--- a/dns/debug-dns.yaml
+++ b/dns/debug-dns.yaml
@@ -19,7 +19,7 @@ spec:
         effect: NoSchedule
       containers:
       - name: debug
-        image: jhansen/k8s-debug-pod:dns
+        image: jhansen/k8s-debug-pod:dns-0.1.0
         imagePullPolicy: Always
         command: ["/debug-dns"]
         env:
